add BillBoardCrawling first

--- a/doc/BillBoardCrawling.ipynb
+++ b/doc/BillBoardCrawling.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "bbd5732a-7e18-4f19-86e7-627eff63f76c",
    "metadata": {},
    "outputs": [
@@ -34,92 +34,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "크롤링 날짜 리스트: ['2025-05-21', '2025-05-22', '2025-05-23', '2025-05-24', '2025-05-25', '2025-05-26', '2025-05-27']\n",
-      "총 7개의 일자를 크롤링합니다...\n",
+      "크롤링 날짜 리스트: ['2025-05-04', '2025-05-11', '2025-05-18', '2025-05-25']\n",
+      "총 4개의 일자를 크롤링합니다...\n",
       "\n",
-      "2025-05-21 → 크롤링 시작...\n",
-      "2025-05-21: 에러 발생 → HTTPSConnectionPool(host='www.billboard.com', port=443): Max retries exceeded with url: /charts/hot-100/2025-05-21 (Caused by NewConnectionError('<urllib3.connection.HTTPSConnection object at 0x00000185DC548A50>: Failed to establish a new connection: [Errno 11001] getaddrinfo failed'))\n",
-      "2025-05-22 → 크롤링 시작...\n",
-      "2025-05-22: 에러 발생 → HTTPSConnectionPool(host='www.billboard.com', port=443): Max retries exceeded with url: /charts/hot-100/2025-05-22 (Caused by NewConnectionError('<urllib3.connection.HTTPSConnection object at 0x00000185DC548D50>: Failed to establish a new connection: [Errno 11001] getaddrinfo failed'))\n",
-      "2025-05-23 → 크롤링 시작...\n",
-      "\n",
-      "📅 [2025-05-23] 상위 10곡\n",
-      "  #1 | Luther - Kendrick Lamar & SZA\n",
-      "  #2 | Ordinary - Alex Warren\n",
-      "  #3 | Die With A Smile - Lady Gaga & Bruno Mars\n",
-      "  #4 | A Bar Song (Tipsy) - Shaboozey\n",
-      "  #5 | Nokia - Drake\n",
-      "  #6 | I'm The Problem - Morgan Wallen\n",
-      "  #7 | Lose Control - Teddy Swims\n",
-      "  #8 | Beautiful Things - Benson Boone\n",
-      "  #9 | Pink Pony Club - Chappell Roan\n",
-      "  #10 | Anxiety - Doechii\n",
-      "2025-05-23: 12곡 수집 성공\n",
-      "2025-05-24 → 크롤링 시작...\n",
-      "\n",
-      "📅 [2025-05-24] 상위 10곡\n",
-      "  #1 | Luther - Kendrick Lamar & SZA\n",
-      "  #2 | Ordinary - Alex Warren\n",
-      "  #3 | Die With A Smile - Lady Gaga & Bruno Mars\n",
-      "  #4 | A Bar Song (Tipsy) - Shaboozey\n",
-      "  #5 | Nokia - Drake\n",
-      "  #6 | I'm The Problem - Morgan Wallen\n",
-      "  #7 | Lose Control - Teddy Swims\n",
-      "  #8 | Beautiful Things - Benson Boone\n",
-      "  #9 | Pink Pony Club - Chappell Roan\n",
-      "  #10 | Anxiety - Doechii\n",
-      "2025-05-24: 12곡 수집 성공\n",
+      "2025-05-04 → 크롤링 시작...\n",
+      "2025-05-04: 100곡 수집 성공\n",
+      "2025-05-11 → 크롤링 시작...\n",
+      "2025-05-11: 100곡 수집 성공\n",
+      "2025-05-18 → 크롤링 시작...\n",
+      "2025-05-18: 100곡 수집 성공\n",
       "2025-05-25 → 크롤링 시작...\n",
-      "\n",
-      "📅 [2025-05-25] 상위 10곡\n",
-      "  #1 | What I Want - Morgan Wallen Featuring Tate McRae\n",
-      "  #2 | Just In Case - Morgan Wallen\n",
-      "  #3 | I'm The Problem - Morgan Wallen\n",
-      "  #4 | Ordinary - Alex Warren\n",
-      "  #5 | Luther - Kendrick Lamar & SZA\n",
-      "  #6 | Die With A Smile - Lady Gaga & Bruno Mars\n",
-      "  #7 | I Got Better - Morgan Wallen\n",
-      "  #8 | Superman - Morgan Wallen\n",
-      "  #9 | A Bar Song (Tipsy) - Shaboozey\n",
-      "  #10 | Love Somebody - Morgan Wallen\n",
-      "2025-05-25: 12곡 수집 성공\n",
-      "2025-05-26 → 크롤링 시작...\n",
-      "\n",
-      "📅 [2025-05-26] 상위 10곡\n",
-      "  #1 | What I Want - Morgan Wallen Featuring Tate McRae\n",
-      "  #2 | Just In Case - Morgan Wallen\n",
-      "  #3 | I'm The Problem - Morgan Wallen\n",
-      "  #4 | Ordinary - Alex Warren\n",
-      "  #5 | Luther - Kendrick Lamar & SZA\n",
-      "  #6 | Die With A Smile - Lady Gaga & Bruno Mars\n",
-      "  #7 | I Got Better - Morgan Wallen\n",
-      "  #8 | Superman - Morgan Wallen\n",
-      "  #9 | A Bar Song (Tipsy) - Shaboozey\n",
-      "  #10 | Love Somebody - Morgan Wallen\n",
-      "2025-05-26: 12곡 수집 성공\n",
-      "2025-05-27 → 크롤링 시작...\n",
-      "\n",
-      "📅 [2025-05-27] 상위 10곡\n",
-      "  #1 | What I Want - Morgan Wallen Featuring Tate McRae\n",
-      "  #2 | Just In Case - Morgan Wallen\n",
-      "  #3 | I'm The Problem - Morgan Wallen\n",
-      "  #4 | Ordinary - Alex Warren\n",
-      "  #5 | Luther - Kendrick Lamar & SZA\n",
-      "  #6 | Die With A Smile - Lady Gaga & Bruno Mars\n",
-      "  #7 | I Got Better - Morgan Wallen\n",
-      "  #8 | Superman - Morgan Wallen\n",
-      "  #9 | A Bar Song (Tipsy) - Shaboozey\n",
-      "  #10 | Love Somebody - Morgan Wallen\n",
-      "2025-05-27: 12곡 수집 성공\n",
+      "2025-05-25: 100곡 수집 성공\n",
       "\n",
       " 날짜별 크롤링 요약:\n",
-      " - 2025-05-21 | 에러 | 0곡\n",
-      " - 2025-05-22 | 에러 | 0곡\n",
-      " - 2025-05-23 | 성공 | 12곡\n",
-      " - 2025-05-24 | 성공 | 12곡\n",
-      " - 2025-05-25 | 성공 | 12곡\n",
-      " - 2025-05-26 | 성공 | 12곡\n",
-      " - 2025-05-27 | 성공 | 12곡\n"
+      " - 2025-05-04 | 성공 | 100곡\n",
+      " - 2025-05-11 | 성공 | 100곡\n",
+      " - 2025-05-18 | 성공 | 100곡\n",
+      " - 2025-05-25 | 성공 | 100곡\n"
      ]
     }
    ],
@@ -132,11 +63,15 @@
     "def get_date_list(start_date_str, end_date_str):\n",
     "    start_date = datetime.strptime(start_date_str, \"%Y-%m-%d\")\n",
     "    end_date = datetime.strptime(end_date_str, \"%Y-%m-%d\")\n",
+    "    if start_date.weekday() != 6:\n",
+    "        raise ValueError(\"start_date must be a Sunday (weekday=6)\")\n",
+    "    if end_date.weekday() != 5:\n",
+    "        raise ValueError(\"end_date must be a Saturday (weekday=5)\")\n",
     "    date_list = []\n",
     "\n",
     "    while start_date <= end_date:\n",
     "        date_list.append(start_date.strftime(\"%Y-%m-%d\"))\n",
-    "        start_date += timedelta(days=1)  # 하루씩 증가로 해놓긴했는데 빌보드 상에서 일일 순위가 확인이 가능하긴한데 업데이트는 1주일단위로 하는거같음\n",
+    "        start_date += timedelta(days=7)  # 주간차트 얻기 위함.\n",
     "\n",
     "    return date_list\n",
     "\n",
@@ -147,29 +82,25 @@
     "    soup = BeautifulSoup(response.text, \"html.parser\")\n",
     "    chart_items = soup.select(\"div.o-chart-results-list-row-container\")\n",
     "\n",
-    "    daily_results = []\n",
+    "    weekly_results = []\n",
     "\n",
-    "    for item in chart_items[:12]:  # 최대 100위까지 시도\n",
+    "    for item in chart_items[:100]:  # 최대 100위까지 시도\n",
     "        try:\n",
-    "            ranking = item.select_one(\"span.c-label.a-font-primary-bold-l\").text.strip()\n",
+    "            ranking = int(item.select_one(\"span.c-label.a-font-primary-bold-l\").text.strip())\n",
     "            title = item.select_one(\"h3.c-title\").text.strip()\n",
     "            singer = item.select_one(\"span.c-label.a-no-trucate.a-font-primary-s\").text.strip()\n",
     "\n",
-    "            daily_results.append({\n",
-    "                \"date\": date,\n",
-    "                \"ranking\": ranking,\n",
-    "                \"title\": title,\n",
-    "                \"singer\": singer\n",
+    "            weekly_results.append({\n",
+    "                \"basedt\": date,\n",
+    "                \"music_rank\": ranking,\n",
+    "                \"music_name\": title,\n",
+    "                \"artist_name\": singer\n",
     "            })\n",
     "\n",
-    "        except AttributeError:\n",
+    "        except (AttributeError,ValueError):\n",
     "            continue  # 일부 항목 누락 시 무시\n",
     "\n",
-    "    print(f\"\\n📅 [{date}] 상위 10곡\")\n",
-    "    for r in daily_results[:10]:\n",
-    "        print(f\"  #{r['ranking']} | {r['title']} - {r['singer']}\")\n",
-    "\n",
-    "    return daily_results\n",
+    "    return weekly_results\n",
     "\n",
     "def crawl_billboard_range(start_date, end_date, delay_sec=3):\n",
     "    all_results = []\n",
@@ -208,8 +139,9 @@
     "\n",
     "\n",
     "# 사용 예시\n",
-    "start_date = \"2025-05-21\"\n",
-    "end_date = \"2025-05-27\"\n",
+    "start_date = \"2025-05-04\"\n",
+    "end_date = \"2025-05-31\"\n",
+    "\n",
     "\n",
     "data = crawl_billboard_range(start_date, end_date)\n",
     "\n"
